app name changed from photo picker to photo app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PhotoPicker</string>
+    <string name="app_name">Photo App</string>
     <string name="pick_image">Pick image</string>
     <string name="ok">OK</string>
     <string name="invalid_no_of_images">You are only allowed to select two images</string>
