--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="invalid_no_of_images">You are only allowed to select two images</string>
     <string name="image_count">Image Count : %1$s </string>
     <string name="enter_the_new_list_size">Photo Picker</string>
-    <string name="please_enter_the_number_to_change_the_list_size">Please enter the number to change the list size</string>
+    <string name="please_enter_the_number">Please enter the number to change the list size</string>
     <string name="apply">APPLY</string>
+    <string name="you_can_select">You can select images pressing the below button</string>
 </resources>
